<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sight Seeen</string>
    <string name="mainpagelable1"><![CDATA[Sight Seen Coast & Other Coast Packages]]></string>
    <string name="page1but1">Sight Seen</string>
    <string name="pageonebut2">Other Coast Details</string>
    <string name="sightseenpagelab1">Sight Seen</string>
    <string name="sightseenpagebut1">Add New Sight</string>
    <string name="sightseenpagebut2">Sight Seen Details</string>
    <string name="sightseenpagebut3">Sight Senn Rules</string>
    <string name="ansl1">Add New Sight</string>
    <string name="sightno">Sight No</string>
    <string name="sihtnotext">sight no</string>
    <string name="sightnohint">sight no</string>
    <string name="sightname">Sight Name</string>
    <string name="sightnamehint">enter name</string>
    <string name="snohint">enter sight no</string>
    <string name="childticketprice">Ticket Price For Per One Child(Age bellow 12 year)</string>
    <string name="ticketpriceauld">Ticket Price For  Adult</string>
    <string name="childticketpricehint">enter price</string>
    <string name="auldticketpricehint">enter price</string>
    <string name="addsightpagebut1">Save</string>
    <string name="ruleslabel1">Sight Seen Rules</string>
    <string name="rule1">What To Wear</string>
    <string name="rule1dis">Cotton clothes are useful at any time of the year but you will need light woollens for the hills and waterproof clothing or an umbrella.Modest dress for women is advisable especially off the beach and when visiting religious sites. Don\'t forget comfortable shoes, sandals or trainers and cotton socks. If you are planning to trek and climb go prepared with suitable gear. Water sports enthusiasts would do well to take their snorkels and diving equipment along.</string>
    <string name="next1"><![CDATA[Next>>]]></string>
    <string name="ssr2">Sight Seen Rules</string>
    <string name="r2">Health Precautions</string>
    <string name="rd2">The health risks in Sri Lanka are different to those encountered in Europe and North America. Watch out for bowel diseases such as diarrhoea and amoebic dysentery, vector borne diseases such as malaria and dengue fever, and a variety of fungal infections. Sri Lanka.s physicians, though, many of whom have trained in the West, are particularly experienced in dealing with locally occurring diseases.</string>
    <string name="n2"><![CDATA[Next>>]]></string>
    <string name="previousb1"><![CDATA[<<Previous]]></string>
    <string name="previous2"><![CDATA[<<Previous]]></string>
    <string name="rulepage3">Sight Seen Rules</string>
    <string name="rule3">Banks</string>
    <string name="ruled3">Banks are open from 0900 hrs to 1300 hours Monday to Friday. Some city banks close at 1500 hrs, while some are open on Saturday mornings. It.s easy to withdraw money across the island at ATMs using international credit cards or debit cards.</string>
    <string name="previous3"><![CDATA[<<Previous]]></string>
    <string name="title">Title</string>
    <string name="next4"><![CDATA[Next>>]]></string>
    <string name="f1">Fragment1</string>
    <string name="f2">Fragment2</string>
    <string name="ms1">This is fragment 1</string>
    <string name="ms2">This is fragment 2</string>
    <string name="basicrule">Sight Seen Rule</string>
    <string name="basicrule1"><![CDATA[Photo Permits & Entrance Charges]]></string>
    <string name="basicruled1">Sri Lanka is a photographer’s delight. However, permits are required before you can take photos at certain sites. Entrance tickets to individual sites are available only from 6 a.m. to 10 a.m. These tickets cover charges for photography, recording and parking.Rates are quoted in US Dollars and rupee parities are subject to fluctuation.</string>
    <string name="previous6"><![CDATA[<<Previous]]></string>
    <string name="next6"><![CDATA[Next>>]]></string>
    <string name="basicrule2"><![CDATA[Photography, Restrictions & Permits]]></string>
    <string name="brule2">Sight Seen Rules</string>
    <string name="rule2"><![CDATA[Photography, Restrictions & Permits]]></string>
    <string name="br2">Sri Lanka is a tremendously photogenic island, so it.s hardly surprising that most tourists bring a camera of some kind when they visit the country. The stunning landscapes, the captivating fauna and lush flora, and the stupendous archaeological remains provide great opportunities: a bonus is that Sri Lankans love to be captured on film. So it.s easy to capture the traditional rural lifestyle. You.ll find villagers, farmers, fishermen and tea pluckers will readily stand in front of your viewfinder. Your subjects will often ask to have a copy of picture sent to them. This may be laborious, but it is a reasonable courtesy as many may never have seen a picture of themselves. It is also understandable that many will also expect a token recompense for allowing themselves to be photographed.</string>
    <string name="next7"><![CDATA[Next>>]]></string>
    <string name="previous7"><![CDATA[<<Previous]]></string>
    <string name="pre2"><![CDATA[<<Previous]]></string>
    <string name="tprice">Sight Seen Ticket Price</string>
    <string name="tpricechiled">Per-Chiled</string>
    <string name="ticketpricperauld">Per-Auld</string>
    <string name="dialogmas">Do you want to save this new sight?</string>
    <string name="othercostlabel1">Other Cost Details</string>
    <string name="otherbut1">Other Package Details</string>
    <string name="otherbut2">Add New Package</string>
    <string name="add_new_cost_packages">Add New Cost Packages</string>
    <string name="package_no1" tools:ignore="DuplicateDefinition">Package No</string>
    <string name="package_name1">Package Name</string>
    <string name="package_price1">Package Price</string>
    <string name="add_new_package1">Add New Package</string>
    <string name="package_no2">Package No</string>
    <string name="package_name2">Package Name</string>
    <string name="package_price2">Package Price</string>
    <string name="package_description2">Package Description</string>
    <string name="pno1">Package NO</string>
    <string name="pname1">Package Name</string>
    <string name="dis">Package Description</string>
    <string name="pprice">Package Price</string>
    <string name="anewpackage">Add New Cost Package</string>
    <string name="msgforsightdetails">This page shows the details about the sight seen tickets price.</string>
    <string name="multext1">After conecting the Data Base ,this page take the data from data base and create sights seen ticket prices.</string>
    <string name="msg22">After creating the Data Base,this page take data from the data base and create COUSTOM LISTVIEW layout. This page will auto genarate according to data base data.</string>
    <string name="otherpacmsg">This page shows the details about the other cost package details. Ex-Birth day party packages Valantime packages wedding packages Sim card offers Medical packages... This packages auto genarate by geting details from the Data Base. So with out creating Data Base this page can not see now.To create this page i will use CUSTOM LISTVIEW layout.</string>
    <string name="othercostmsg1">This page shows the details about the other cost package details. Ex-Birth day party packages,Valantine packages,wedding packages,Sim card offers,Medical packages... This packages auto genarate by geting details from the Data Base. So with out creating Data Base this page can not see now.To create this page i will use CUSTOM LISTVIEW layout.</string>
    <string name="othercostmseg1">This page shows the details about the other cost package details. Ex-Birth day party packages,Valantine packages,wedding packages,Sim card offers,Medical packages... This packages auto genarate by geting details from the Data Base. So with out creating Data Base this page can not see now.To create this page i will use CUSTOM LISTVIEW layout.</string>
    <string name="show">Show</string>
    <string name="updatebtn">Update</string>
    <string name="deletebutn">Delete</string>
    <string name="sellectall">Sellect All</string>
    <string name="sellectallbut">Select all Other Packages</string>
    <string name="updatebut3">Update</string>
    <string name="deletepackages">Delete</string>
    <string name="newvewall">View All Packages</string>
    <string name="search">Search</string>
    <string name="etailscrud">DEtails for new admin about how to insert,delete and update details</string>
    <string name="packagenonew">Package No(Enter Integer No)</string>
    <string name="otherpackagemenu">Other Package Menue</string>
    <string name="ode">Other Package details with price and Add new Packages</string>
    <string name="dinerpac">Dinner Packages</string>
    <string name="bdyapac">B\'Day Packages</string>
    <string name="fm1">changeFragment</string>
    <string name="package1">B\'Day Party Packeges</string>
    <string name="pac2">Wedding Packages</string>
    <string name="pac3">Dinner Packages</string>
    <string name="pac5">Medecine Packages</string>
    <string name="b1">B\'Day Party Packages</string>
    <string name="pa1">B\'DAy Party Packages</string>
    <string name="p11">BBHJ\nguh\nffcgvhbjkl</string>
    <string name="pacd1">B\'Day Pary Packages \n 5 person package - 2500 \n 10 person package - 3500 \n 15 person package - 7500 \n 25 person package 12000 \n 30 person package - 20000 \n</string>
    <string name="pfd1">\n\nB\'Day Pary Packages \n  \n 5 person package - 2500 \n \n 10 person package - 3500 \n \n 15 person package - 7500 \n \n 25 person package - 12000 \n\n 30 person package - 20000 \n\n</string>
    <string name="pf2">"\n \n Dinner Packages \n \n \n  outdoor  5 person package - 85000 \n \n outdoor  10  person package - 12000 \n \n outdoor  15 person package - 15000 \n \n outdoor  20 person package - 20000 \n \n Indoor 5 person package - 75000 \n \n Indoor 10 person package - 12000 \n \n  "</string>
    <string name="pacwed">Wedding pacakages \n \n \n  10 person package - 25000 (With offers) \n \n  20 person package - 35000 \n \n Special Gift(Ring) - 125000 \n \n Special gift(Ring with gold) - 10000\n\n</string>
    <string name="medpac">"Medicine Packages \n \n  Chaneling a doctor - 1500 \n \n Basic Medicine Package For Month (4 Person ) - 3000 \n \n Hospital charges for per person for one day - 1000\n \n "</string>
    <string name="sightmenu">Our Avalable Sight Seens  Packages in Sri Lanka</string>
    <string name="bsa">Show All</string>
    <string name="newsigno">Enter Sight No(Integer No)</string>
    <string name="nweshow">Add</string>
    <string name="dadmin">Details For New Admin</string>
    <string name="selall">Select All</string>
    <string name="adname">Enter Admin Name</string>
    <string name="adminsing">Sing In</string>
    <string name="channel_name">Sing Up</string>
    <string name="channel_description">Sing Up</string>
    <string name="cannotaccsses">All the users can not access this page.Admins onlly can access this page.</string>
    <string name="admsg">Admins of Elephas App can access this page and they can add new sight seen packages.\nIf You are admin,you can sign in.Then send a notification to your mobile.Thorough that notification you can access the Add New sight Seen Page and add new Sight Seen details.</string>
    <string name="back"><![CDATA[<<Back]]></string>
    <string name="nback"><![CDATA[<< Back]]></string>
    <string name="mdgothercost">Admins of Elephas App can access this page and they can add new other cost packages.\nIf You are admin,you can sign in.Then send a notification to your mobile.Thorough that notification you can access the Other Cost package  Page and add new Other Cost Package details.</string>
    <string name="con1">Confirm</string>
    <string name="Confirm">Confirm</string>
    <string name="ncon">Do you shuwar you want add new data</string>
</resources>