<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_new_sight">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="141dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:text="@string/ansl1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="135dp"
        android:layout_height="39dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:text="@string/sightno"
        android:textColor="#1A1818"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/sno1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/sno1"
        android:layout_width="217dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/snohint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/sname1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="137dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:text="@string/sightname"
        android:textColor="#1A1818"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/sname1"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/sname1"
        android:layout_width="224dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/sightnamehint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sno1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="95dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/tpricechiled"
        android:textColor="#1A1818"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/childprice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <EditText
        android:id="@+id/childprice"
        android:layout_width="229dp"
        android:layout_height="38dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:ems="10"
        android:hint="@string/childticketpricehint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="89dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:text="@string/ticketpricperauld"
        android:textColor="#1A1818"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/adultprice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/adultprice"
        android:layout_width="233dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:ems="10"
        android:hint="@string/auldticketpricehint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/childprice" />

    <Button
        android:id="@+id/s_saveButton"
        android:layout_width="84dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/addsightpagebut1"
        android:textColor="#090909"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/s_showButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="291dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:text="@string/tprice"
        android:textColor="#010101"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/s_showButton"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/show"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/s_updateButton"
        app:layout_constraintStart_toEndOf="@+id/s_updateButton"
        app:layout_constraintTop_toBottomOf="@+id/adultprice" />

    <Button
        android:id="@+id/s_updateButton"
        android:layout_width="92dp"
        android:layout_height="42dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:text="@string/updatebtn"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/s_deleteButton"
        app:layout_constraintStart_toEndOf="@+id/s_showButton"
        app:layout_constraintTop_toBottomOf="@+id/adultprice" />

    <Button
        android:id="@+id/s_deleteButton"
        android:layout_width="83dp"
        android:layout_height="43dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:text="@string/deletebutn"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/s_updateButton"
        app:layout_constraintTop_toBottomOf="@+id/adultprice" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclev"
        android:layout_width="409dp"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_updateButton" />

</androidx.constraintlayout.widget.ConstraintLayout>